added buttons to the serivces section on the home page. changed the CTA to be discovery calls. Including in the footer across all pages

--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
                         <br>It feels like a check-box exercise
                         <br>
                         <br>Or you're getting poor results.</p>
+                        <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Newsletter Audit Discovery Call</a>
                 </div>
-
+            
                 <div class="service-card glass fade-in stagger-2">
                     <h3>⚙️ Newsletter Strategy Development </h3>
                         <p><br>We'll build your comprehensive newsletter strategy from the ground up, including audience analysis, content planning, and tailored growth + monetisation recommendations.
@@ -155,23 +156,27 @@
                         <br>You recognise email is a powerful channel.
                         <br>You're fed up of sending promotional emails that land in spam folders. 
                         <br>You're ready to optimise email to fuel your biz</p>
+                        <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Newsletter Strategy Discovery Call</a>
                 </div>
 
                 <div class="service-card glass fade-in stagger-3">
                     <h3>🕶️ The Newsletter Mastery Program</h3>
-                        <p><br>Set yourself up for success across the core newsletter pillars
-                        <br>
-                        <br><i>Distribution, Content, and Business</i>
-                        <br>
-                        <br>With expert advice, guidance and coaching. 
-                        <br>
-                        <br><b>Perfect If...</b>
-                        <br>You're an entreprenerial creator or founder looking to launch or refine your newsletter strategy + develop a truely owned channel.
+                    <p><br>Set yourself up for success across the core newsletter pillars
+                    <br>
+                    <br><i>Distribution, Content, and Business</i>
+                    <br>
+                    <br>With expert advice, guidance and coaching. 
+                    <br>
+                    <br><b>Perfect If...</b>
+                    <br>You're an entreprenerial creator or founder looking to launch or refine your newsletter strategy + develop a truely owned channel.
+                    </p>
+                    <a href="https://madbananamedia.com/newslettermasteryprogram" class="btn btn-large">Learn More + Join The Waitlist</a>
 
                 </div>
             </div>
+
             <div class="services-cta fade-in stagger-4">
-                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Let's Chat ☎️</a>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Let's Chat ☎️</a>
             </div>
         </div>
     </section>
@@ -179,7 +184,7 @@
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials">
         <div class="testimonials-container">
-            <h2 class="fade-in">They're MAD About Us</h2>
+            <h2 class="fade-in">They love working with us<br><span style="color:#fcf3db ;">So will you</span></h2>
             <div class="testimonial-card glass fade-in stagger-1">
                 <div class="testimonial-content">
                     <script type="text/javascript" src="https://testimonial.to/js/iframeResizer.min.js"></script>
@@ -206,7 +211,7 @@
             <br>
             And we can help <span style="color:#f7b40d ;">YOU</span>.</h2>
             <div class="testimonials-cta fade-in stagger-2">
-                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Start With A Free 1hr Call</a>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Book A Discovery Call</a>
             </div>
         </div>
     </section>
@@ -217,7 +222,7 @@
             <h2>Transform Your Newsletter Strategy</h2>
             <p><b>You're just 60 mins away from immediately actionable, expert advice.</b></p>
             <p>Get your free newsletter strategy 1-2-1.</p>
-            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞 Book Now</a>
+            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Discovery Call</a>
         </div>
     </section>
 
@@ -481,7 +486,7 @@
                 <h3>Links You'll 💛</h3>
                 <div class="footer-links">
                     <p><a href="https://linkedin.com/in/chriscerra" target="_blank">LinkedIn</a></p>
-                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Email Strategy 1-2-1</a></p>
+                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Strategy Discovery Call</a></p>
                     <p><a href="https://testimonial.to/newsletters/love/all" target="_blank">Wall of Love</a></p>
                     <p><a href="#faq">No B.S. F.A.Q</a></p>
                     <p><a href="https://madbananamedia.com/partners">Let's Team Up</a></p>
