--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -105,7 +105,7 @@
                 <h3>Links You'll 💛</h3>
                 <div class="footer-links">
                     <p><a href="https://linkedin.com/in/chriscerra" target="_blank">LinkedIn</a></p>
-                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Email Strategy 1-2-1</a></p>
+                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Strategy Discovery Call</a></p>
                     <p><a href="https://testimonial.to/newsletters/love/all" target="_blank">Wall of Love</a></p>
                     <p><a href="#faq">No B.S. F.A.Q</a></p>
                     <p><a href="https://madbananamedia.com/partners">Let's Team Up</a></p>
