--- a/nmp-waitlist-thankyou.html
+++ b/nmp-waitlist-thankyou.html
@@ -32,9 +32,6 @@
         </div>
     </nav>
 
-
-
-
     <!-- CTA Section -->
     <section id="cta" class="cta-section">
         <div class="cta-container glass fade-in">
@@ -45,11 +42,6 @@
             <a href="https://www.linkedin.com/in/chriscerra/" class="btn btn-large">Come Behind The Scenes</a>
         </div>
     </section>
-
-
-
-
-
 
 
     <!-- Footer -->
@@ -68,7 +60,7 @@
                 <h3>Links You'll 💛</h3>
                 <div class="footer-links">
                     <p><a href="https://linkedin.com/in/chriscerra" target="_blank">LinkedIn</a></p>
-                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Email Strategy 1-2-1</a></p>
+                    <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Strategy Discovery Call</a></p>
                     <p><a href="https://testimonial.to/newsletters/love/all" target="_blank">Wall of Love</a></p>
                     <p><a href="#faq">No B.S. F.A.Q</a></p>
                     <p><a href="https://madbananamedia.com/partners">Let's Team Up</a></p>
