more copy changes and CTA edits

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- CTA Section -->
     <section id="cta" class="cta-section">
         <div class="cta-container glass fade-in">
-            <h2>Expert advice is just  60 mins away</h2>
+            <h2>Expert help is just  60 mins away</h2>
             <p>Transform your newsletter strategy + make email your best channel.</p>
             <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞 Book A Discovery Call</a>
         </div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="about-cta fade-in stagger-4">
-                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Get Our Help</a>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Book A Discovery Call</a>
             </div>
         </div>
     </section>
@@ -175,7 +175,10 @@
             </div>
 
             <div class="services-cta fade-in stagger-4">
-                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Let's Chat ☎️</a>
+                <h2>Not Sure What You Need?</h2>
+                <h3>Chat with us. No <i>pitch</i>. No <i>Deck</i>.<br><br>Just a conversation over coffee (and maybe a banana)</h3>
+                <br>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Chat With Us</a>
             </div>
         </div>
     </section>
@@ -218,9 +221,8 @@
     <!-- CTA Section -->
     <section id="cta2" class="cta-section">
         <div class="cta-container glass fade-in">
-            <h2>Transform Your Newsletter Strategy</h2>
-            <p><b>You're just 60 mins away from immediately actionable, expert advice.</b></p>
-            <p>Get your free newsletter strategy 1-2-1.</p>
+            <h2>Expert help is just 60mins away</h2>
+            <p>Email is your best channel.<br>You just haven't discovered it (yet)</p>
             <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Discovery Call</a>
         </div>
     </section>
@@ -462,7 +464,7 @@
                 <br>
                 We have the <span style="color:#f7b40d ;">answers</span>.</h2>
                 <div class="faq-cta fade-in stagger-2">
-                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Chat With Us</a>
+                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Book A Discovery Call</a>
                 </div>
             </div>
 
@@ -500,7 +502,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>made with 🍌 by a bunch of new media champions.</p>
+            <p>made with 🍌 by a bunch of new media champions | #MakeEmailSexyAgain</p>
             <br>
             <p>&copy; 2025 Mad Banana Media | <a href="privacy.html">Privacy Policy</a> | <a href="mailto:hi@madbananamedia.com">Contact</a> | All rights reserved</p>
         </div>
