missed a save from the last commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="cta-container glass fade-in">
             <h2>Expert help is just  60 mins away</h2>
             <p>Transform your newsletter strategy + make email your best channel.</p>
-            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">📞 Book A Discovery Call</a>
+            <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Discovery Call</a>
         </div>
     </section>
 
