changed book meeting copy across all pages, and tweaked Services copy

--- a/index.html
+++ b/index.html
@@ -149,15 +149,24 @@
             <div class="services-grid">
                 <div class="service-card glass fade-in stagger-1">
                     <h3>🔍 Newsletter Strategy Audit</h3>
-                        <p><br>Complete analysis of your current email operations (or lack of). We'll course correct with specific recommendations, and a step by step breakdown.<br>
-                        <br><b>Perfect If...</b>
-                        <br>You're sending a newsletter already
+                        <p>
+                        <br>Sending a newsletter already, but mostly <i>‘because we know we should’</i> ?
                         <br>
-                        <br>But without any direction
+                        <br>Writing emails with no direction?
+                        <br>Not sure how you can improve?
+                        <br>Getting ‘meh’ results?
                         <br>
-                        <br>It feels like a check-box exercise
+                        <br>A <b>Newsletter Strategy Audit</b> amplifies what you’re doing right + corrects what you’re doing wrong.
                         <br>
-                        <br>Or you're getting poor results.</p>
+                        <br><b>We deep dive everything:</b> 
+                        <br>➝ Content performance
+                        <br>➝ Sign up experience
+                        <br>➝ Monetisation
+                        <br>➝ Tech set-up
+                        <br>and more
+                        <br>
+                        <br>Then give you a step-by-step plan to level up 📈
+                        </p>
                         <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Discovery Call</a>
                 </div>
             
