--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                 <div class="service-card glass fade-in stagger-1">
                     <h3>🔍 Newsletter Strategy Audit</h3>
                         <p>
-                        <br>Sending a newsletter already, but mostly <i>‘because we know we should’</i> ?
+                        <br>You send a newsletter already. Mostly <i>‘because we know we should’</i>
                         <br>
-                        <br>Writing emails with no direction?
-                        <br>Not sure how you can improve?
-                        <br>Getting ‘meh’ results?
+                        <br>You write with no direction.
+                        <br>You're not sure how to improve.
+                        <br>You get ‘meh’ results.
                         <br>
                         <br>A <b>Newsletter Strategy Audit</b> amplifies what you’re doing right + corrects what you’re doing wrong.
                         <br>
