--- a/privacy.html
+++ b/privacy.html
@@ -22,7 +22,7 @@
                 <li><a href="https://madbananamedia.com/#testimonials">Our Results 🎯</a></li>
                 <li><a href="https://madbananamedia.com/#faq">Your Questions 🙋</a></li>
                 <li><a href="https://madbananamedia.com/partners">Partners 💼</a></li>
-                <li><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1">Let's Chat ☎️</a></li>
+                <li><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1">Book A Discovery Call</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
