services copy updated, including newsletter mastery program

--- a/index.html
+++ b/index.html
@@ -172,35 +172,59 @@
             
                 <div class="service-card glass fade-in stagger-2">
                     <h3>⚙️ Newsletter Strategy Development </h3>
-                        <p><br>We'll build your comprehensive newsletter strategy from the ground up, including audience analysis, content planning, and tailored growth + monetisation recommendations.
-                        <br>So you can go from zero to 100, real quick.
+                        <p>
+                        <br>You constantly produce content to stay in front of your audience.
+                        <br>You spend big on paid ads.
+                        <br> You have an email list, but you’ve never focussed energy there.
                         <br>
-                        <br><b>Perfect If...</b>
-                        <br>You recognise email is a powerful channel.
-                        <br>You're fed up of sending promotional emails that land in spam folders. 
-                        <br>You're ready to optimise email to fuel your biz</p>
+                        <br>You know email is important. But you don’t have the time, the expertise, or the patience…
+                        <br>
+                        <br><b>Newsletter Strategy</b> goes beyond email.
+                        <br>We dig deep on your business goals.
+                        <br>And your customers.
+                        <br>
+                        <br><b>We create a Newsletter Strategy covering the 3 pillars of email
+                        <br>➝ Distribution
+                        <br>➝ Content
+                        <br>➝ Business</b>
+                        <br>
+                        <br>Share it with you. Answer questions.
+                        <br>And support the re-launch of <b>the only marketing channel you truly own</b>!
+                        </p>
                         <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large">Book A Discovery Call</a>
                 </div>
 
                 <div class="service-card glass fade-in stagger-3">
                     <h3>🕶️ The Newsletter Mastery Program</h3>
-                    <p><br>Set yourself up for success across the core newsletter pillars
+                    <p>
+                    <br>You’re an entrepreneurial creator or founder 
+                    <br>Taking your first steps into newsletters
+                    <br>(or want a major refresh!)
                     <br>
-                    <br><i>Distribution, Content, and Business</i>
+                    <br>You value deep understanding. 
+                    <br>You don’t ask what.
+                    <br>You ask, why?
                     <br>
-                    <br>With expert advice, guidance and coaching. 
+                    <br>There’s a million +1 blogs, tutorials, and ‘gurus’
+                    <br>But you don’t know where to start
+                    <br>And you’re short on time.
                     <br>
-                    <br><b>Perfect If...</b>
-                    <br>You're an entreprenerial creator or founder looking to launch or refine your newsletter strategy + develop a truely owned channel.
+                    <br> <b>The Newsletter Master Program is built for you.</b>
+                    <br>
+                    <br>➝ Learn alongside entrepreneurial creators & founders
+                    <br>➝ Get bespoke advice, guidance + coaching in 6 x 1:1s
+                    <br>➝ Master the 3 core pillars of email
+                    <br>➝ 7yrs of newslettter learnings
+                    <br>➝ A 3 month tansformation
                     </p>
-                    <a href="https://tally.so/r/npQOvE" class="btn btn-large">Join The Waitlist</a>
+                    <a href="https://tally.so/r/npQOvE" target="_blank" class="btn btn-large">Join The Waitlist Now</a>
 
                 </div>
             </div>
 
             <div class="services-cta fade-in stagger-4">
                 <h2>Not Sure What You Need?</h2>
-                <h3>Chat with us. No <i>pitch</i>. No <i>Deck</i>.<br><br>Just a conversation over coffee (and maybe a banana)</h3>
+                <h3>Chat with us. No <i>pitching</i>. No <i>deck</i>.<br><br>Just a conversation over coffee (+ maaaybe a banana)</h3>
                 <br>
                 <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="aboutbtn btn-large">Chat With Us</a>
             </div>
