added fade in stagger 4 to the FAQ items 5-9 to fix spacing on the accordian

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 </div>
 
                 <!-- FAQ Item 5 -->
-                <div class="faq-item">
+                <div class="faq-item fade-in stagger-4">
                     <button class="faq-question" onclick="toggleFaq(this)">
                         What the $%!& even is an 'email strategy'?
                         <span class="faq-icon">+</span>
@@ -417,7 +417,7 @@
                 </div>
 
                 <!-- FAQ Item 6 -->
-                <div class="faq-item">
+                <div class="faq-item fade-in stagger-4">
                     <button class="faq-question" onclick="toggleFaq(this)">
                         Do you work on a retainer?
                         <span class="faq-icon">+</span>
@@ -438,7 +438,7 @@
                 </div>
 
                 <!-- FAQ Item 7 -->
-                <div class="faq-item">
+                <div class="faq-item fade-in stagger-4">
                     <button class="faq-question" onclick="toggleFaq(this)">
                         Can't we just get AI to do what you do?
                         <span class="faq-icon">+</span>
@@ -459,7 +459,7 @@
                 </div>
 
                 <!-- FAQ Item 8 -->
-                <div class="faq-item">
+                <div class="faq-item fade-in stagger-4">
                     <button class="faq-question" onclick="toggleFaq(this)">
                         You work with businesses and creators, aren't they very different customers?
                         <span class="faq-icon">+</span>
@@ -488,7 +488,7 @@
                 </div>
 
                 <!-- FAQ Item 9 -->
-                <div class="faq-item">
+                <div class="faq-item fade-in stagger-4">
                     <button class="faq-question" onclick="toggleFaq(this)">
                         Do you only work with certain email platforms?
                         <span class="faq-icon">+</span>
