added team page to footer, and updated the footer across all pages

--- a/team.html
+++ b/team.html
@@ -100,8 +100,9 @@
                     <p><a href="https://linkedin.com/in/chriscerra" target="_blank">LinkedIn</a></p>
                     <p><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank">Free Strategy Discovery Call</a></p>
                     <p><a href="https://testimonial.to/newsletters/love/all" target="_blank">Wall of Love</a></p>
-                    <p><a href="#faq">No B.S. F.A.Q</a></p>
-                    <p><a href="https://madbananamedia.com/partners">Let's Team Up</a></p>
+                    <p><a href="https://madbananamedia.com/partners">Let's Partner Up</a></p>
+                    <p><a href="https://remotebase.co/publications" target="_blank">Publications</a></p>
+                    <p><a href="https://madbananamedia.com/team">Meet The Team</a></p>
                 </div>
             </div>
 
