tweaked team training page. Now complete

--- a/training.html
+++ b/training.html
@@ -36,39 +36,29 @@
     <section class="cta-section">
 
             <div class="partners-content glass fade-in">
-                <h1>Team Training</h1> 
+                <h1>Our MAD Knowledge</h1> 
                 <br>
-                <h2 class="partners-subtitle">for teams large and small</h2>                
+                <h2 class="partners-subtitle">For YOUR Team</h2><br>                
                 <div class="partners-description">
                     <p>
-                    Want to know who's behind Mad Banana Media?
+                    Start-up team with no in-house email specialist?
                     <br><br>
-                    Maybe you're wondering if you should work with us. 
+                    International team with big plans for email?
                     <br><br>
-                    Let me help you.
-                    <br><br>
-                    You won't find any glossy headshots, shiney suits, or cliche descriptions here.
-                    <br><br>
-                    I’m here to do <b>MAD</b> things with your most powerful marketing channel - not audition for <i>The Apprentice</i>.
-                    <br><br>
-                    As a one-person team, working with me is direct, lean + efficient.
-                    <br><br>
-                    I’m an out-and-out marketer, a newsletter nerd, and an idea machine. 
-                    <br><br>
-                    For over 7 years, I’ve been running my own newsletters. Some of them did really well, leading to features in global media outlets + invitations to speak around the world.
-                    <br><br>
-                    Alongside launching my own, I’ve acquired, advised, and partnered with different publications at various stages of growth + success. 
-                    <br><br>
-                    With MBM, there’s never any gatekeeping or missing context. <i>Like, ever.</i>
-                    <br><br>
-                    And thanks to the international network of industry experts I’ve built over the years, working with MBM means you never experience resource limitations, or a narrow scope of expertise.
-                    <br><br>
-                    Just a dedicated, personal, contact bringing the strategic knowledge bombs you want + need.
+                    Get structured training + support ranging from:
+                    <ul class="partners-list">
+                        <li>Webinars + Workshops</li>
+                        <li>Platform + System Training</li>
+                        <li>Newsletter Office Hours</li>
+                        <li>One-to-One Mentorship</li>
+                        <li>One-time or regular sessions</li>
+                    </ul>   
                     </p>
                 </div>
 
                 <div style="align-content: center;">
-                    <h2>Want Training For You + Your Team?</h2>
+                    <h2>Your great people<br>+<br>Our MAD knowledge
+                    <br>=<br>Email Marketing Dream Team 💌</h2>
                     <br>
                     <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank" class="btn btn-large">Book A Call</a>
                 </div>
