additional tweaks to training page

--- a/training.html
+++ b/training.html
@@ -38,29 +38,41 @@
             <div class="partners-content glass fade-in">
                 <h1>Our MAD Knowledge</h1> 
                 <br>
-                <h2 class="partners-subtitle">For YOUR Team</h2><br>                
+                <h2 class="partners-subtitle">YOUR Team</h2><br>                
                 <div class="partners-description">
                     <p>
-                    Start-up team with no in-house email specialist?
+                    Whether you're a start-up team with no in-house email specialist, or an international team with big plans for email
                     <br><br>
-                    International team with big plans for email?
+                    We've got structured training + support options built for <b>you</b>.
                     <br><br>
-                    Get structured training + support ranging from:
-                    <ul class="partners-list">
-                        <li>Webinars + Workshops</li>
-                        <li>Platform + System Training</li>
-                        <li>Newsletter Office Hours</li>
-                        <li>One-to-One Mentorship</li>
-                        <li>One-time or regular sessions</li>
-                    </ul>   
+                    Want to spend 90mins having all your email newsletter questions answered? <i>Let's do it.</i>
+                    <br><br>
+                    Want someone to walk you through the beehiiv interface inside your own account? <i>You got it.</i><br><br>
+                    <u><b>Why Do You Offer Training?</b></u>
+                    <br><br>
+                    Because after <b>yeaaaaars</b> working on email newsletters, we noticed <i>most teams don't know what they don't know</i>. 
+                    <br><br>
+                    Which is a blasted shame, and something we want to fix.
+                    <br><br>
+                    Here's how we deliver MAD training
+                        <ul class="partners-list">
+                            <li>Webinars + Workshops</li>
+                            <li>Platform + System Training</li>
+                            <li>Newsletter Office Hours</li>
+                            <li>One-to-One Mentorship</li>
+                            <li>One-time or regular sessions</li>
+                        </ul>
                     </p>
+                </div>
+                <div class="partners-description">
+                    <p>Think MAD training could be for you? <br>Let's chat!</p>
                 </div>
 
                 <div style="align-content: center;">
                     <h2>Your great people<br>+<br>Our MAD knowledge
                     <br>=<br>Email Marketing Dream Team 💌</h2>
-                    <br>
-                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank" class="btn btn-large">Book A Call</a>
+                    <br><br>
+                    <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" target="_blank" class="aboutbtn btn-large">Book A Call</a>
                 </div>
             </div>        
 
