changes to the button padding on the final CTA

--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -226,10 +226,26 @@
             <div class="mastery-included-grid">
                 <div class="mastery-included-column">
                     <h3>Core Program</h3>
-                    <div class="mastery-included-item">4 weeks of live group learning sessions (recorded for replay)</div>
-                    <div class="mastery-included-item">4 private 1:1 coaching calls during the program</div>
-                    <div class="mastery-included-item">Weekly AMA sessions</div>
-                    <div class="mastery-included-item">Structured homework with direct feedback</div>
+                    <div class="mastery-core-item">
+                        <strong>4 weeks of live group learning sessions (recorded for replay)</strong>
+                        <p>placeholder</p>
+                        <span class="mastery-core-value">placeholder</span>
+                    </div>
+                    <div class="mastery-core-item">
+                        <strong>4 private 1:1 coaching calls during the program</strong>
+                        <p>placeholder</p>
+                        <span class="mastery-core-value">placeholder</span>
+                    </div>
+                    <div class="mastery-core-item">
+                        <strong>Weekly AMA sessions</strong>
+                        <p>placeholder</p>
+                        <span class="mastery-core-value">placeholder</span>
+                    </div>
+                    <div class="mastery-core-item">
+                        <strong>Structured homework with direct feedback</strong>
+                        <p>placeholder</p>
+                        <span class="mastery-core-value">placeholder</span>
+                    </div>
                 </div>
                 <div class="mastery-included-column">
                     <h3>Bonuses (Total Value: £1,950)</h3>
@@ -261,15 +277,15 @@
     <!-- About Section -->
     <section class="mastery-about">
         <div class="mastery-container fade-in">
-            <p class="mastery-section-label">Your Guide</p>
+            <!--<p class="mastery-section-label">Your Guide</p> -->
             <div class="mastery-about-content">
                 <div class="mastery-about-avatar">🍌</div>
                 <div class="mastery-about-text">
                     <h2>Hi, I'm Chris.</h2>
-                    <p>I've been running newsletters since 2019—building multiple publications including RemoteBase (5K+ subscribers) while living as a full-time digital nomad.</p>
-                    <p>Through Mad Banana Media, I've helped creators and entrepreneurs across industries turn scattered email efforts into strategic, revenue-generating assets.</p>
-                    <p>I'm not here to give you theory. I'm here to show you what actually works—and help you implement it.</p>
-                    <p class="mastery-about-tagline">7 years of newsletter experience. Condensed into 4 weeks.</p>
+                    <p>I've been running multiple newsletters since 2019, including RemoteBase (11K+ subscribers), all while living + working around the world.</p>
+                    <p>Mad Banana Media, is how I help creators + entrepreneurs across industries turn scattered email efforts into strategic, revenue-generating assets.</p>
+                    <p>With the Newsletter Mastery Program, I'm not here to give you theory, or cookie-cutter templates. I'm here to show you what actually works, based on your specific situation, and guide you in implementing it.</p>
+                    <p class="mastery-about-tagline">It's 7yrs of newsletter experience, in 4 weeks.</p>
                 </div>
             </div>
         </div>
