updating banana avatar for headshot and making it a circle

--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -279,8 +279,10 @@
         <div class="mastery-container fade-in">
             <!--<p class="mastery-section-label">Your Guide</p> -->
             <div class="mastery-about-content">
-                <div class="mastery-about-avatar">🍌</div>
-                <div class="mastery-about-text">
+                
+                    <img src="chriscerra.png" alt="Chris Cerra, Founder at Mad Banana Media" class="circleheadshot"/>
+                
+                    <div class="mastery-about-text">
                     <h2>Hi, I'm Chris.</h2>
                     <p>I've been running multiple newsletters since 2019, including RemoteBase (11K+ subscribers), all while living + working around the world.</p>
                     <p>Mad Banana Media, is how I help creators + entrepreneurs across industries turn scattered email efforts into strategic, revenue-generating assets.</p>
